# random-seed-examples

./: CMakeLists.txt  README.md  seed.c  seed.cpp  seed.f90  seed.jl  seed.m  seed.py  seed_octave.m
cmake/: FindOctave.cmake
